--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,7 @@
     }
    ],
    "source": [
-    "city_keys = greenville.list(greenville)\n",
+    "city_keys = greenville.list(greenville.keys)\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
