--- a/index.ipynb
+++ b/index.ipynb
@@ -162,20 +162,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-12-8c149417be51>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-8c149417be51>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    city_values # [68, 'Greenville', 'USA', 93]\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[68, 'Greenville', 'USA', 93]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_values = list(greenville(values())\n",
+    "city_values = list(greenville.values())\n",
     "city_values # [68, 'Greenville', 'USA', 93]"
    ]
   },
