Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
     }
    ],
    "source": [
-    "cities[7]['City'] = PyeongChang\n",
+    "cities[7]['City'] = 'PyeongChang\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
